<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/max_temp_layout"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/min_temp_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="750px"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/max_temp_text" />

        <CheckBox
            android:id="@+id/max_temp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_temp_layout"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/mean_temp_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_temp_layout">

        <TextView
            android:layout_width="750px"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/min_temp_text" />

        <CheckBox
            android:id="@+id/min_temp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mean_temp_layout"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/precip_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_temp_layout">

        <TextView
            android:layout_width="750px"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/mean_temp_text" />

        <CheckBox
            android:id="@+id/mean_temp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/precip_layout"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/predict_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mean_temp_layout">

        <TextView
            android:layout_width="750px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/precip_text" />

        <CheckBox
            android:id="@+id/precip_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="predictTemperatureAction"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="@+id/results_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precip_layout" />

    <TextView
        android:id="@+id/results_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predict_button" />

</androidx.constraintlayout.widget.ConstraintLayout>